nenolod     2006/08/27 03:32:55 UTC	(20060827-6227)
  Log:
  - support the notion of a later addition to EUID to add additional fields.
  This addition does not yet exist, but adding it would be trivial, as atheme would still
  pick the right field for use as gecos now.
  

  Changes:	Modified:
  +2 -2		trunk/protocol/charybdis.c (File Modified) 


nenolod     2006/08/27 03:19:07 UTC	(20060827-6225)
  Log:
  Preliminary support for EUID.
  EUID is a replacement for standard TS6 UIDs which better supports the notion of having accounts and 
  services spoofs.
  More information is available at http://www.stack.nl/~jilles/irc/euid.txt
  

  Changes:	Modified:
  +62 -2	trunk/protocol/charybdis.c (File Modified) 


w00t        2006/08/26 23:41:15 UTC	(20060826-6223)
  Log:
  Fork inspircd.c protocol module to inspircd_dev.c for 1.1 branch experimental support - FJOIN sending modified so far.

  Changes:	Modified:
  +1 -0		trunk/protocol/Makefile.in (File Modified) 
  +923 -0	trunk/protocol/inspircd_dev.c (File Added) 


jilles      2006/08/21 15:36:49 UTC	(20060821-6219)
  Log:
  operserv ignore: add snoops
  

  Changes:	Modified:
  +3 -0		trunk/modules/operserv/ignore.c (File Modified) 


jilles      2006/08/21 15:32:29 UTC	(20060821-6217)
  Log:
  Fix crash on /os ignore add.
  

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/ignore.c (File Modified) 


jilles      2006/08/21 15:27:59 UTC	(20060821-6215)
  Log:
  flatfile backend: add snoops about database errors
  

  Changes:	Modified:
  +3 -0		trunk/backend/flatfile.c (File Modified) 


jilles      2006/08/21 15:25:03 UTC	(20060821-6213)
  Log:
  chanserv close: add snoops
  

  Changes:	Modified:
  +2 -0		trunk/modules/chanserv/close.c (File Modified) 


jilles      2006/08/21 15:05:22 UTC	(20060821-6211)
  Log:
  - Convert wallops about failed attempts to load modules to snoops
  - Add snoops about successful module loads and unloads
  

  Changes:	Modified:
  +9 -3		trunk/src/module.c (File Modified) 

